# DroidGrity

./: .gitignore  IDEAS.MD  IDEAS.md  LICENSE.md  README.md  banner.py  constants.py  droidgrity.py  requirements.txt
cpp/: CMakeLists.txt  droidgrity.cpp.template  droidgrity.h  logging.h  mylibc.cpp  mylibc.h  path_helper.cpp  path_helper.h  sha256.h
cpp/include/: mylibc.h
cpp/include/helpers/: apksigningblock_helper.h  inflate_helper.h  path_helper.h  pkcs7_helper.h  sha256_helper.h  unzip_helper.h
cpp/include/utils/: common.h
cpp/openssl/include/openssl/: configuration.h
cpp/src/: mylibc.cpp
cpp/src/helpers/: apksigningblock_helper.cpp  inflate_helper.cpp  path_helper.cpp  pkcs7_helper.cpp  sha256_helper.cpp  unzip_helper.cpp
smali/: DroidGrity.smali.template
utils/: apk.py  builder.py  filler.py  injector.py  installer.py  keystore.py  signer.py
